--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>ru.aston</groupId>
     <artifactId>Aston-Hibernate-Homework</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2</version>
     <packaging>war</packaging>
 
     <properties>
